--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,14 @@
     "require": {
         "php": ">=5.4.0"
     },
-    "require-dev": {
-        "doctrine/orm": "dev-master",
-        "doctrine/dbal": "dev-master"
+    "support": {
+        "issues": "https://github.com/koriym/print_o/issues",
+        "source": "https://github.com/koriym/print_o"
     },
     "autoload": {
-        "psr-0": {
-            "Printo": "src/"
-        }
+        "classmap": [
+            "src/Printo/Printo.php",
+            "src/Printo/print_o.php"
+        ]
     }
 }
