Add version / stability.

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "printo/printo",
     "type": "library",
-    "description": "Display mind-map style object grapgh.",
+    "description": "An object graph visualizer.",
+    "version": "0.1",
     "keywords": ["debug", "object"],
     "homepage": "https://github.com/koriym/print_o",
     "license": "BSD-3-Clause",
@@ -24,5 +25,6 @@
             "src/Printo/Printo.php",
             "src/Printo/print_o.php"
         ]
-    }
+    },
+    "minimum-stability": "dev"
 }
