--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "koriym/printo",
     "description": "An object graph visualizer.",
-    "keywords": ["debug", "object graph"],
+    "keywords": ["debug", "var_dump"],
     "homepage": "https://github.com/koriym/print_o",
     "license": "BSD-3-Clause",
     "authors": [
@@ -21,5 +21,10 @@
         "files": [
             "src/print_o.php"
         ]
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
 }
