--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,27 +1,8 @@
+imports:
+    - javascript
+    - php
 filter:
     paths: [src/*]
-    excluded_paths: [tests/*, vendor/*, src/print_o.php]
-
-before_commands:
-    - 'composer install --dev --prefer-source'
-
+    excluded_paths: [src/print_o.php]
 tools:
-    php_mess_detector:
-        enabled: true
-        config:
-            ruleset: ./phpmd.xml
-    php_code_sniffer:
-        enabled: true
-        config:
-            ruleset: ./phpcs.xml
-    php_analyzer:
-        enabled: true
-    php_cpd:
-        enabled: true
-    php_loc:
-        enabled: true
-        excluded_dirs:
-            - build
-            - tests
-            - vendor
     external_code_coverage: true
