--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,8 +1,18 @@
-imports:
-    - javascript
-    - php
 filter:
-    paths: [src/*]
-    excluded_paths: [src/print_o.php]
+    paths: ["src/*"]
 tools:
     external_code_coverage: true
+    php_code_coverage: true
+    php_sim: true
+    php_mess_detector: true
+    php_pdepend: true
+    php_analyzer: true
+    php_cpd: true
+    php_mess_detector:
+        enabled: true
+        config:
+            ruleset: ./phpmd.xml
+    php_code_sniffer:
+        enabled: true
+        config:
+            ruleset: ./phpcs.xml
