--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
 language: php
 
 php:
-  - 5.4
   - 5.5
   - 5.6
+  - hhvm
+  - 7
 
-before_install:
- - composer selfupdate
- - composer install
- - wget https://scrutinizer-ci.com/ocular.phar
+install: travis_retry composer install --no-interaction --prefer-source
 
 script:
- - phpunit --coverage-text --coverage-clover=coverage.clover
+ - if [ "$TRAVIS_PHP_VERSION" == "hhvm" ]; then phpunit; fi
+ - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then phpunit --coverage-text --coverage-clover=coverage.clover; fi
 
 after_script:
- - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+ - wget https://scrutinizer-ci.com/ocular.phar
+ - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
