--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,24 @@
 language: php
-
+sudo: false
 php:
-  - 5.5
   - 5.6
-  - hhvm
   - 7
-
-install: travis_retry composer install --no-interaction --prefer-source
-
+  - 7.1
+  - hhvm
+cache:
+  directories:
+    - vendor
+    - $HOME/.composer/cache
+env:
+  matrix:
+    - DEPENDENCIES=""
+    - DEPENDENCIES="--prefer-lowest --prefer-stable"
+before_script:
+  - composer self-update
+  - composer update $DEPENDENCIES
 script:
- - if [ "$TRAVIS_PHP_VERSION" == "hhvm" ]; then phpunit; fi
- - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then phpunit --coverage-text --coverage-clover=coverage.clover; fi
+  - ./vendor/bin/phpunit --coverage-clover=coverage.clover;
+  - if [ "$TRAVIS_PHP_VERSION" = "7.1" ]; then wget http://cs.sensiolabs.org/download/php-cs-fixer-v2.phar && php php-cs-fixer-v2.phar fix --config=.php_cs -v --dry-run --using-cache=no --path-mode=intersection `git diff --name-only --diff-filter=ACMRTUXB $TRAVIS_COMMIT_RANGE`; fi
 
 after_script:
- - wget https://scrutinizer-ci.com/ocular.phar
- - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
+  - if [ "$TRAVIS_PHP_VERSION" = "7.1" ]; then wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
